<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#201E1E"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/righteous"
                android:text="@string/profile"
                android:textColor="#246505"
                android:textSize="50sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_select_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/language"
                android:fontFamily="@font/righteous"
                android:src="@drawable/language"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="#FFFFFF" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/image_profile"
            app:srcCompat="@mipmap/profile_image" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_text"
            android:ems="10"
            android:fontFamily="@font/righteous"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#4D4D4D" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_text"
            android:ems="10"
            android:fontFamily="@font/righteous"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#4D4D4D" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_text"
            android:ems="10"
            android:fontFamily="@font/righteous"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#4D4D4D" />

        <EditText
            android:id="@+id/credit_input"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_text"
            android:ems="10"
            android:enabled="false"
            android:fontFamily="@font/righteous"
            android:hint="@string/credits"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#4D4D4D" />

        <LinearLayout
            android:id="@+id/greenBtns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarStyle"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <Button
                android:id="@+id/update_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_rounded"
                android:fontFamily="@font/righteous"
                android:padding="8dp"
                android:text="@string/edit_profile"
                android:textColor="@color/white"
                style="?android:attr/buttonBarStyle"/>

            <Button
                android:id="@+id/add_credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_rounded"
                android:fontFamily="@font/righteous"
                android:padding="8dp"
                android:text="@string/add_credits"
                android:textColor="@color/white"
                android:visibility="invisible"
                style="?android:attr/buttonBarStyle"/>

            <Button
                android:id="@+id/logout_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/logout"
                android:fontFamily="@font/righteous"
                android:padding="8dp"
                android:text="@string/log_out"
                android:textColor="@color/black"
                style="?android:attr/buttonBarStyle"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>